syntax = "proto3";

// import "google/protobuf/timestamp.proto";

package agent_proto;

option go_package = "./agent";

service AgentService {
  // rpc Health(HealthRequest) returns (HealthResponse) {}
  rpc Run(RunRequest) returns (RunResponse) {}
  rpc Algo(AlgoRequest) returns (AlgoResponse) {}
  rpc Data(DataRequest) returns (DataResponse) {}
  rpc Result(ResultRequest) returns (ResultResponse) {}
}

// message HealthRequest {}
// message HealthResponse { string status = 1; }

message RunRequest { bytes computation = 1; }

message RunResponse { string Computation = 1; }

message AlgoRequest { bytes algorithm = 1; }

message AlgoResponse { string algorithmID = 1; }

message DataRequest { string dataset = 1; }

message DataResponse { string datasetID = 1; }

message ResultRequest {}

message ResultResponse {
  bytes file = 1;
}
